@@ -132,21 +132,26 @@ function Gallery() {
 function poweredBy () {
 	global $gallery;
 
-	$link = '<a href="'.$gallery->url.'" target="_blank">'.Gallery().'</a>';
+	$addon = "\n<!-- {$gallery->version} -->";
 
 	if (isDebugging() || $gallery->app->devMode == "yes" || $gallery->user->isAdmin()) {
 		$version = $gallery->version;
 	}
 	else {
-		$version = "1<!-- {$gallery->version} -->";
+		$version = "1";
 	}
 
 	if ($gallery->session->offline) {
-		return sprintf(_("Generated by %s v%s"), $link, $version);
+		$altText = sprintf(_("Generated by %s v%s"), Gallery(), $version);
 	}
 	else {
-		return sprintf(_("Powered by %s v%s"), $link, $version);
+		$altText = sprintf(_("Powered by %s v%s"), Gallery(), $version);
 	}
+
+	$link = '<a href="'.$gallery->url.'" target="_blank">'. gImage('gallery1.gif', $altText) .'</a>';
+
+	return $link . $addon;
+
 }
 
 function debugMessage($msg, $file, $line, $level = NULL) {
