@@ -1,3 +1,11 @@
+2007-06-23 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b82
+
+ * Change: New Gallery 1 footer image (ripped from G2 and changed *g*)
+
+ * Change: New donate footer image (just riped from G2)
+
+ * Fix: Invented ignorelist for "unreal" options attributs.
+
 2007-06-23 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b81
 
  * New: In manage user a nice tooltip with helpful information
